<resources>
    <string name="app_name">ParkMan</string>
    <string name="title_activity_maps">ParkMan</string>
    <string name="current_location">current_location</string>
    <string name="location_data">location_data</string>
    <string name="north">north</string>
    <string name="south">south</string>
    <string name="west">west</string>
    <string name="east">east</string>
    <string name="start_parking">Start Parking</string>
    <string name="parkingMsg">Your Cark is parked in </string>
    <string name="not_in_zone">No Zone Selected</string>

    <string name="parking_name">Name:</string>
    <string name="payment_is_allowed">Payment is allowed:</string>
    <string name="max_duration">Max Duration:</string>
    <string name="service_price">Service Price:</string>
    <string name="depth">depth:</string>
    <string name="draw">Draw:</string>
    <string name="sticker_required">Sticker:</string>
    <string name="currency">Currency:</string>
    <string name="contact_email">Contact Email:</string>
    <string name="country">Country:</string>
    <string name="provider_id">Provider Id:</string>
    <string name="provider_name">Provider Name:</string>
    <string name="required">Required</string>
    <string name="not_required">Not Required</string>
</resources>
